--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=arts-backend
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/rra_dbbackend?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/rra_db?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=80097
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
